7/5/2024
- Fixed Anu Spawning Naturally In Fabric Versions
- Fixed Tag "mammoth_commandables" Being Empty
- Fixed Advancement "From the Dead!" Being Granted When Obtaining An Ancient Sword
- Fixed DataFixer Spam On Fabric
- Fixed Advancement Typos
- Fixed Forge Pregnancy Type Registry
- Fixed Logger Spam While Ridding Futabasaurus
- Fixed Some Server Issues -> Still Untested And Unsupported
- Removed Tag "piglin_taming_helmets"
- Removed Advancement "Anu On Earth"
- Added Tag "piglin_taming_armour"
- Added Ancient Chestplate Artifact To Relic Scrap Analyzation Recipe
- Added Ancient Leggings Artifact To Relic Scrap Analyzation Recipe
- Added Ancient Boots Artifact To Relic Scrap Analyzation Recipe
- Added Prehistoric Coin to Relic Scrap Analyzation Recipe
- Added Advancement "The Master!"
- Added Advancement "Analyzer!"
- Added Advancement "Decked Out!"
- Added Advancement "Ticket to the Past!"
- Added Advancement "Time Traveller!"
- Added Advancement "Back to the Future!"
- Added Prehistoric Dimension
- Added Prehistoric Ocean
- Added Deep Prehistoric Ocean
- Added Prehistoric Plains
- Added Prehistoric Forest
- Added Prehistoric Desert
- Added Prehistoric Jungle
- Added Prehistoric River
- Added Prehistoric Taiga
- Added Prehistoric Swamp
- Added Prehistoric Beach
- Added Prehistoric Oak Feature
- Added Prehistoric Birch Feature
- Added Prehistoric Fancy Oak Feature
- Added Prehistoric Swamp Oak Feature
- Added Prehistoric Spruce Feature
- Added Prehistoric Pine Feature
- Added Prehistoric Jungle Tree Feature
- Added Mega Prehistoric Jungle Tree Feature
- Added Trees Prehistoric Plains Feature
- Added Trees Prehistoric Forest Feature
- Added Trees Prehistoric Water Feature
- Added Trees Prehistoric Taiga Feature
- Added Trees Prehistoric Jungle Feature
- Added Prehistoric Oak Checked Placement
- Added Prehistoric Birch Checked Placement
- Added Prehistoric Fancy Oak Checked Placement
- Added Prehistoric Swamp Oak Checked Placement