@@ -65,6 +65,9 @@ public class FossilsLegacyEntityLootSubProvider extends EntityLootSubProvider {
         this.add(FossilsLegacyEntityTypes.EGG.get(), FossilsLegacyLootTables.TRICERATOPS_EGG, this.createEggTable(FossilsLegacyItems.TRICERATOPS_EGG.get()));
         this.add(FossilsLegacyEntityTypes.EGG.get(), FossilsLegacyLootTables.TYRANNOSAURUS_EGG, this.createEggTable(FossilsLegacyItems.TYRANNOSAURUS_EGG.get()));
         this.add(FossilsLegacyEntityTypes.EGG.get(), FossilsLegacyLootTables.VELOCIRAPTOR_EGG, this.createEggTable(FossilsLegacyItems.VELOCIRAPTOR_EGG.get()));
+        this.add(FossilsLegacyEntityTypes.EGG.get(), FossilsLegacyLootTables.CARNOTAURUS_EGG, this.createEggTable(FossilsLegacyItems.CARNOTAURUS_EGG.get()));
+        this.add(FossilsLegacyEntityTypes.EGG.get(), FossilsLegacyLootTables.CRYOLOPHOSAURUS_EGG, this.createEggTable(FossilsLegacyItems.CRYOLOPHOSAURUS_EGG.get()));
+        this.add(FossilsLegacyEntityTypes.EGG.get(), FossilsLegacyLootTables.THERIZINOSAURUS_EGG, this.createEggTable(FossilsLegacyItems.THERIZINOSAURUS_EGG.get()));
 
         this.add(FossilsLegacyEntityTypes.PREGNANT_CAT.get(), LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ConstantValue.exactly(1.0F)).add(LootItem.lootTableItem(Items.STRING).apply(SetItemCountFunction.setCount(UniformGenerator.between(0.0F, 2.0F))))));
         this.add(FossilsLegacyEntityTypes.PREGNANT_COW.get(), LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ConstantValue.exactly(1.0F)).add(LootItem.lootTableItem(Items.LEATHER).apply(SetItemCountFunction.setCount(UniformGenerator.between(0.0F, 2.0F))).apply(LootingEnchantFunction.lootingMultiplier(UniformGenerator.between(0.0F, 1.0F))))).withPool(LootPool.lootPool().setRolls(ConstantValue.exactly(1.0F)).add(LootItem.lootTableItem(Items.BEEF).apply(SetItemCountFunction.setCount(UniformGenerator.between(1.0F, 3.0F))).apply(SmeltItemFunction.smelted().when(LootItemEntityPropertyCondition.hasProperties(LootContext.EntityTarget.THIS, ENTITY_ON_FIRE))).apply(LootingEnchantFunction.lootingMultiplier(UniformGenerator.between(0.0F, 1.0F))))));
